--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
 
     <canvas id="canvas"></canvas>
 
-    <script type="text/javascript" src="lib/jquery-2.0.3.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
 
