switch rendering to SVG

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 
     <canvas id="canvas"></canvas>
 
+    <div id="board"></div>
+
+    <script type="text/javascript" src="lib/svg.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
