add Board and BoardView classes

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>HEXAGO</h1>
 
-    <canvas id="canvas"></canvas>
+    <!-- <canvas id="canvas"></canvas> -->
 
     <div id="board"></div>
 
