add minimal menu and new game button

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,15 @@
 <body>
     <h1>HEXAGO</h1>
 
+    <div id="menu">
+        <h2>Welcome!</h2>
+        <button class="new-game">New Game</button>
+    </div>
+
     <div id="board"></div>
 
     <script type="text/javascript" src="lib/svg.min.js"></script>
+    <script type="text/javascript" src="lib/move.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
