add player and simple player list view

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,15 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/skin.css" />
 </head>
 <body>
-    <h1>HEXAGO</h1>
 
     <div id="menu">
-        <h2>Welcome!</h2>
+        <h1>HEXAGO</h1>
         <button class="new-game">New Game</button>
     </div>
 
     <div id="board"></div>
+
+    <div id="player-list"></div>
 
     <script type="text/javascript" src="lib/svg.min.js"></script>
     <script type="text/javascript" src="lib/move.min.js"></script>
