--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <div id="menu">
         <h1>HEXAGO</h1>
         <button class="new-game">New Game</button>
+        <ul id="game-list"></ul>
     </div>
 
     <div id="board"></div>
