add backbone for views and refactor

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,11 @@
 </head>
 <body>
 
-    <div id="menu">
+    <div id="lobby">
         <h1>HEXAGO</h1>
-        <button class="new-game">New Game</button>
-        <ul id="game-list"></ul>
     </div>
 
-    <div id="board"></div>
-
-    <div id="player-list"></div>
+    <div id="game"></div>
 
     <script type="text/javascript" src="lib/svg.min.js"></script>
     <script type="text/javascript" src="lib/move.min.js"></script>
